# nixvm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  entitlements.plist  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
c_src/: nix_setting_shim.cc
examples/minimal/: flake.nix  module.nix
examples/nixelium/: flake.nix  module.nix
examples/test-vm/: flake.nix  module.nix
modules/: guest.nix
src/: lib.rs  main.rs
